--- a/android/res/values-hu/strings.xml
+++ b/android/res/values-hu/strings.xml
@@ -1780,7 +1780,8 @@
 	<string name="whatsnew_catalog_new_title">Új útmutatók katalógusa és több ezer utazási ötlet</string>
 	<string name="whatsnew_catalog_new_message">Frissítettük az útmutatók katalógusát és minden nyelven hozzáadtuk a fordításokat. Tervezze meg előre utazását!</string>
 	<string name="whatsnew_elevation_profile_title">Emelkedési profil az utazási útmutatókban</string>
-	<string name="whatsnew_elevation_profile_message">A kurzorral becsülje meg a közelgő offline felemelkedések és leereszkedések nehézségét a megvásárolt útvonal profiljában.</string>
+	<string name="whatsnew_elevation_profile_message">A kurzorral becsülje meg a közelgő offline felemelkedések és leereszkedések nehézségét a megvásárolt útvonal profiljában.\nTöltse le és próbálja ki a katalógus \"Ingyenes minták\" részben</string>
+	<string name="whatsnew_elevation_profile_cta_button">Minták ellenőrzése</string>
 
 	<!-- SECTION: Types -->
 	<string name="type.aerialway.station">Felvonóállomás</string>
