--- a/android/res/values-in/strings.xml
+++ b/android/res/values-in/strings.xml
@@ -1772,7 +1772,8 @@
 	<string name="whatsnew_catalog_new_title">Katalog panduan baru dan ribuan ide perjalanan</string>
 	<string name="whatsnew_catalog_new_message">Kami telah memperbarui katalog panduan dan menambahkan terjemahan dalam semua bahasa. Mulai perencanaan terlebih dahulu!</string>
 	<string name="whatsnew_elevation_profile_title">Profil elevasi dalam panduan perjalanan</string>
-	<string name="whatsnew_elevation_profile_message">Mengevaluasi kerumitan kenaikan dan penurunan offline yang akan datang dengan kursor di profil dari rute yang dibeli.</string>
+	<string name="whatsnew_elevation_profile_message">Mengevaluasi kerumitan kenaikan dan penurunan offline yang akan datang dengan kursor di profil dari rute yang dibeli.\nUnduh dan coba di bagian \"Sampel Gratis\" dalam katalog</string>
+	<string name="whatsnew_elevation_profile_cta_button">Periksa sampel</string>
 
 	<!-- SECTION: Types -->
 	<string name="type.aerialway.station">Stasiun kereta gantung</string>
