--- a/android/res/values-nb/strings.xml
+++ b/android/res/values-nb/strings.xml
@@ -1672,7 +1672,8 @@
 	<string name="whatsnew_catalog_new_title">Ny katalog med tusenvis av ferieideer</string>
 	<string name="whatsnew_catalog_new_message">Vi har oppdatert guidekatalogen vår og lagt til oversettelser til alle språk. Begynn å planlegge på forhånd!</string>
 	<string name="whatsnew_elevation_profile_title">Høydeprofil i guidene</string>
-	<string name="whatsnew_elevation_profile_message">Evaluer vanskeligheten til kommende oppstigninger og nedstigninger uten nett med markøren i profilen til den kjøpte ruten.</string>
+	<string name="whatsnew_elevation_profile_message">Evaluer vanskeligheten til kommende oppstigninger og nedstigninger uten nett med markøren i profilen til den kjøpte ruten.\nLast ned og prøv i katalogdelen \"Gratis eksempler\"</string>
+	<string name="whatsnew_elevation_profile_cta_button">Se et eksempel</string>
 
 	<!-- SECTION: Types -->
 	<string name="type.aerialway.station">Kabelbanestasjon</string>
