--- a/iphone/Maps/LocalizedStrings/ar.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/ar.lproj/Localizable.strings
@@ -3268,7 +3268,9 @@
 
 "whatsnew_elevation_profile_title" = "ملف تحديد الارتفاع في أدلة السفر";
 
-"whatsnew_elevation_profile_message" = "قم بتقييم درجة صعوبة الصعود والهبوط التاليين دون اتصال باستخدام المؤشر في الملف الخاص بالمسار الذي تم شراؤه.";
+"whatsnew_elevation_profile_message" = "قم بتقييم درجة صعوبة الصعود والهبوط التاليين دون اتصال باستخدام المؤشر في الملف الخاص بالمسار الذي تم شراؤه.\nقم بالتنزيل وتجربة قسم \"العينات المجانية\" من القائمة";
+
+"whatsnew_elevation_profile_cta_button" = "تفقد العينات";
 
 
 /**********  Partners  **********/
