--- a/iphone/Maps/LocalizedStrings/el.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/el.lproj/Localizable.strings
@@ -3268,7 +3268,9 @@
 
 "whatsnew_elevation_profile_title" = "Προφίλ υψόμετρου στους οδηγούς";
 
-"whatsnew_elevation_profile_message" = "Αξιολογήστε τη δυσκολία των επερχόμενων αναβάσεων και καταβάσεων εκτός σύνδεσης με τη βοήθεια του δρομέα στο προφίλ της διαδρομής που αποκτήσατε.";
+"whatsnew_elevation_profile_message" = "Αξιολογήστε τη δυσκολία των επερχόμενων αναβάσεων και καταβάσεων εκτός σύνδεσης με τη βοήθεια του δρομέα στο προφίλ της διαδρομής που αποκτήσατε.\nΚάντε λήψη και δοκιμή στο τμήμα καταλόγου \"Δωρεάν παραδείγματα\"";
+
+"whatsnew_elevation_profile_cta_button" = "Παράδειγμα";
 
 
 /**********  Partners  **********/
