--- a/iphone/Maps/LocalizedStrings/fa.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/fa.lproj/Localizable.strings
@@ -3268,7 +3268,9 @@
 
 "whatsnew_elevation_profile_title" = "پروفایل ارتفاع در راهنمای سفر";
 
-"whatsnew_elevation_profile_message" = "پیچیدگی بالا رفتن ها و پایین آمدن های آفلاین بعدی را در پروفایل مسیرهای خریداری شده به وسیله مکان نما ارزیابی کنید.";
+"whatsnew_elevation_profile_message" = "پیچیدگی بالا رفتن ها و پایین آمدن های آفلاین بعدی را در پروفایل مسیرهای خریداری شده به وسیله مکان نما ارزیابی کنید.\nاز بخش \"نمونه رایگان\" دانلود و امتحان کنید";
+
+"whatsnew_elevation_profile_cta_button" = "بررسی نمونه";
 
 
 /**********  Partners  **********/
