--- a/iphone/Maps/LocalizedStrings/ru.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/ru.lproj/Localizable.strings
@@ -3268,7 +3268,9 @@
 
 "whatsnew_elevation_profile_title" = "Профиль высот в путеводителях";
 
-"whatsnew_elevation_profile_message" = "Оценивайте сложность предстоящих подъемов и спусков офлайн с помощью курсора в профиле приобретенного маршрута.";
+"whatsnew_elevation_profile_message" = "Оценивайте сложность предстоящих подъемов и спусков офлайн с помощью курсора в профиле приобретённого маршрута.\nСкачайте и попробуйте в разделе каталога \"Бесплатные примеры\"";
+
+"whatsnew_elevation_profile_cta_button" = "Посмотреть примеры";
 
 
 /**********  Partners  **********/
