--- a/iphone/Maps/LocalizedStrings/th.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/th.lproj/Localizable.strings
@@ -3268,7 +3268,9 @@
 
 "whatsnew_elevation_profile_title" = "ข้อมูลของความสูงในคู่มือใช้งานเพื่อการท่องเที่ยว";
 
-"whatsnew_elevation_profile_message" = "ประเมินความลำบากของการขึ้นและการลงในเส้นทางข้างหน้าแบบออฟไลน์ ด้วยเคอร์เซอร์ในโปรไฟล์ของเส้นทางที่คุณซื้อไว้";
+"whatsnew_elevation_profile_message" = "ประเมินความลำบากของการขึ้นและการลงในเส้นทางข้างหน้าแบบออฟไลน์ ด้วยเคอร์เซอร์ในโปรไฟล์ของเส้นทางที่คุณซื้อไว้\nดาวน์โหลดและทดลอง \"ตัวอย่างฟรี\" ของส่วนนี้ในแคตตาล็อก";
+
+"whatsnew_elevation_profile_cta_button" = "ดูตัวอย่าง";
 
 
 /**********  Partners  **********/
