--- a/iphone/Maps/LocalizedStrings/uk.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/uk.lproj/Localizable.strings
@@ -3268,7 +3268,9 @@
 
 "whatsnew_elevation_profile_title" = "Профіль висот у путівниках";
 
-"whatsnew_elevation_profile_message" = "Оцінюйте складність майбутніх підйомів і спусків офлайн за допомогою курсору в профілі придбаного маршруту.";
+"whatsnew_elevation_profile_message" = "Оцінюйте складність майбутніх підйомів і спусків офлайн за допомогою курсору в профілі придбаного маршруту.\nЗавантажте та спробуйте в розділі каталогу \"Безкоштовні приклади\"";
+
+"whatsnew_elevation_profile_cta_button" = "Подивитися приклади";
 
 
 /**********  Partners  **********/
