--- a/android/res/values-cs/strings.xml
+++ b/android/res/values-cs/strings.xml
@@ -1782,7 +1782,8 @@
 	<string name="whatsnew_catalog_new_title">Nový katalog průvodců a tisíce nápadů na cestování</string>
 	<string name="whatsnew_catalog_new_message">Aktualizovali jsme katalog průvodců a přidali jsme překlady ve všech jazycích. Začněte plánovat dopředu!</string>
 	<string name="whatsnew_elevation_profile_title">Výškový profil v cestovních průvodcích</string>
-	<string name="whatsnew_elevation_profile_message">Vyhodnoťte obtížnost nadcházejících offline stoupání a klesání pomocí kurzoru v profilu zakoupené trasy.</string>
+	<string name="whatsnew_elevation_profile_message">Vyhodnoťte obtížnost nadcházejících offline stoupání a klesání pomocí kurzoru v profilu zakoupené trasy.\nStáhnout a vyzkoušet v sekci katalogu \"Bezplatné ukázky\"</string>
+	<string name="whatsnew_elevation_profile_cta_button">Podívat se na ukázky</string>
 
 	<!-- SECTION: Types -->
 	<string name="type.aerialway.station">Stanice lanové dráhy</string>
