--- a/android/res/values-es/strings.xml
+++ b/android/res/values-es/strings.xml
@@ -1773,7 +1773,8 @@
 	<string name="whatsnew_catalog_new_title">Nuevo catálogo de guías y miles de ideas para descansar</string>
 	<string name="whatsnew_catalog_new_message">Hemos actualizado el catálogo de guías y agregado traducciones a todos los idiomas. ¡Comienza a planificar con anticipación!</string>
 	<string name="whatsnew_elevation_profile_title">Perfil de altura en las guías</string>
-	<string name="whatsnew_elevation_profile_message">Evalúa la dificultad de los inminentes ascensos y descensos sin conexión, haciendo uso del cursor en el perfil de la ruta adquirida.</string>
+	<string name="whatsnew_elevation_profile_message">Evalúa la dificultad de los inminentes ascensos y descensos sin conexión, haciendo uso del cursor en el perfil de la ruta adquirida.\nDescárgala y pruébala en la sección del catálogo \"Ejemplos gratuitos\"</string>
+	<string name="whatsnew_elevation_profile_cta_button">Ver un ejemplo</string>
 
 	<!-- SECTION: Types -->
 	<string name="type.aerialway.station">Estación de teleférico</string>
