--- a/android/res/values-fi/strings.xml
+++ b/android/res/values-fi/strings.xml
@@ -1773,7 +1773,8 @@
 	<string name="whatsnew_catalog_new_title">Uusi luettelo ja tuhansia lomasi viettoon liittyviä ideoita</string>
 	<string name="whatsnew_catalog_new_message">Olemme päivittäneet matkaopasluettelon ja lisänneet käännöksiä kaikille kielille. Aloita suunnittelu etukäteen!</string>
 	<string name="whatsnew_elevation_profile_title">Korkeuslinjat matkaoppaissa</string>
-	<string name="whatsnew_elevation_profile_message">Arvioi tulevien ylä- ja alamäkien vaikeus offline-tilassa hankitun reitin profiilissa kursorin avulla.</string>
+	<string name="whatsnew_elevation_profile_message">Arvioi tulevien ylä- ja alamäkien vaikeus offline-tilassa hankitun reitin profiilissa kursorin avulla.\nLataa ja kokeile luettelon Maksuttomat esimerkit -osiossa</string>
+	<string name="whatsnew_elevation_profile_cta_button">Katso esimerkki</string>
 
 	<!-- SECTION: Types -->
 	<string name="type.aerialway.station">Köysirata-asema</string>
