--- a/android/res/values-fr/strings.xml
+++ b/android/res/values-fr/strings.xml
@@ -1797,7 +1797,8 @@
 	<string name="whatsnew_catalog_new_title">Nouveau catalogue et des miliers d\'idées de voyages</string>
 	<string name="whatsnew_catalog_new_message">Nous avons mis à jour le catalogue des guides et avons ajouté les traductions dans toutes les langues. Planifiez vos voyages à l\'avance !</string>
 	<string name="whatsnew_elevation_profile_title">Profil altimétrique intégré dans les guides</string>
-	<string name="whatsnew_elevation_profile_message">Vous pouvez estimer la difficulté de vos futures montées et descentes hors connexion à l\'aide d\'un curseur disponible dans le profil de l\'itinéraire acheté.</string>
+	<string name="whatsnew_elevation_profile_message">Vous pouvez estimer la difficulté de vos futures montées et descentes hors connexion à l\'aide d\'un curseur disponible dans le profil de l\'itinéraire acheté.\nTéléchargez et essayez dans le rubrique du catalogue \"Exemples gratuits\"</string>
+	<string name="whatsnew_elevation_profile_cta_button">Voir l\'exemple</string>
 
 	<!-- SECTION: Types -->
 	<string name="type.aerialway.station">Remontées mécaniques</string>
