--- a/android/res/values-it/strings.xml
+++ b/android/res/values-it/strings.xml
@@ -1779,7 +1779,8 @@
 	<string name="whatsnew_catalog_new_title">Nuovo catalogo guide e migliaia di idee per divertirsi</string>
 	<string name="whatsnew_catalog_new_message">Abbiamo aggiornato il nostro catalogo guide e abbiamo aggiunto traduzioni in tutte le lingue. Programma subito i tuoi viaggi!</string>
 	<string name="whatsnew_elevation_profile_title">Profilo altimetrico e guide</string>
-	<string name="whatsnew_elevation_profile_message">Valuta offline la difficoltà di ascesa e discesa grazie al cursore del profilo altimetrico del percorso acquistato.</string>
+	<string name="whatsnew_elevation_profile_message">Valuta offline la difficoltà di ascesa e discesa grazie al cursore del profilo altimetrico del percorso acquistato.\nScarica e prova nella sezione \"Esempi gratuiti\" del catalogo</string>
+	<string name="whatsnew_elevation_profile_cta_button">Guarda l\'esempio</string>
 
 	<!-- SECTION: Types -->
 	<string name="type.aerialway.station">Stazione di rifornimento per auto elettriche</string>
