--- a/android/res/values-ru/strings.xml
+++ b/android/res/values-ru/strings.xml
@@ -1825,7 +1825,8 @@
 	<string name="whatsnew_catalog_new_title">Новый каталог и тысячи идей для отдыха</string>
 	<string name="whatsnew_catalog_new_message">Мы обновили каталог путеводителей и добавили переводы на все языки. Начните планировать заранее!</string>
 	<string name="whatsnew_elevation_profile_title">Профиль высот в путеводителях</string>
-	<string name="whatsnew_elevation_profile_message">Оценивайте сложность предстоящих подъемов и спусков офлайн с помощью курсора в профиле приобретенного маршрута.</string>
+	<string name="whatsnew_elevation_profile_message">Оценивайте сложность предстоящих подъемов и спусков офлайн с помощью курсора в профиле приобретённого маршрута.\nСкачайте и попробуйте в разделе каталога \"Бесплатные примеры\"</string>
+	<string name="whatsnew_elevation_profile_cta_button">Посмотреть примеры</string>
 
 	<!-- SECTION:  Partners  -->
 	<string name="sponsored_partner1_action">Аутлеты</string>
