--- a/android/res/values-sk/strings.xml
+++ b/android/res/values-sk/strings.xml
@@ -1778,7 +1778,8 @@
 	<string name="whatsnew_catalog_new_title">Nový katalóg sprievodcov a tisíce nápadov na cestovanie</string>
 	<string name="whatsnew_catalog_new_message">Aktualizovali sme katalóg sprievodcov a pridali preklady do všetkých jazykov. Začnite plánovať vopred!</string>
 	<string name="whatsnew_elevation_profile_title">Výškový profil v cestovných sprievodcoch</string>
-	<string name="whatsnew_elevation_profile_message">Vyhodnoťte zložitosť prichádzajúcich výstupov a zostupov offline pomocou kurzora v profile zakúpenej trasy.</string>
+	<string name="whatsnew_elevation_profile_message">Vyhodnoťte zložitosť prichádzajúcich výstupov a zostupov offline pomocou kurzora v profile zakúpenej trasy.\nStiahnuť a vyskúšať v sekcii katalógu \"Bezplatné ukážky\"</string>
+	<string name="whatsnew_elevation_profile_cta_button">Zobraziť ukážky</string>
 
 	<!-- SECTION: Types -->
 	<string name="type.aerialway.station">Lanovka</string>
