--- a/android/res/values-th/strings.xml
+++ b/android/res/values-th/strings.xml
@@ -1784,7 +1784,8 @@
 	<string name="whatsnew_catalog_new_title">ไกด์แคตตาล็อกใหม่และไอเดียในการท่องเที่ยวหลายพันอย่าง</string>
 	<string name="whatsnew_catalog_new_message">เราได้อัปเดตไกด์แคตตาล็อก และเพิ่มการแปลในทุกภาษา มาเริ่มวางแผนทริปของคุณล่วงหน้ากัน!</string>
 	<string name="whatsnew_elevation_profile_title">ข้อมูลของความสูงในคู่มือใช้งานเพื่อการท่องเที่ยว</string>
-	<string name="whatsnew_elevation_profile_message">ประเมินความลำบากของการขึ้นและการลงในเส้นทางข้างหน้าแบบออฟไลน์ ด้วยเคอร์เซอร์ในโปรไฟล์ของเส้นทางที่คุณซื้อไว้</string>
+	<string name="whatsnew_elevation_profile_message">ประเมินความลำบากของการขึ้นและการลงในเส้นทางข้างหน้าแบบออฟไลน์ ด้วยเคอร์เซอร์ในโปรไฟล์ของเส้นทางที่คุณซื้อไว้\nดาวน์โหลดและทดลอง \"ตัวอย่างฟรี\" ของส่วนนี้ในแคตตาล็อก</string>
+	<string name="whatsnew_elevation_profile_cta_button">ดูตัวอย่าง</string>
 
 	<!-- SECTION: Types -->
 	<string name="type.aerialway.station">สถานีกระเช้าลอยฟ้า</string>
