--- a/android/res/values-tr/strings.xml
+++ b/android/res/values-tr/strings.xml
@@ -1784,7 +1784,8 @@
 	<string name="whatsnew_catalog_new_title">Yeni bir katalog ve binlerce tatil fikri</string>
 	<string name="whatsnew_catalog_new_message">Rehberlerin kataloğunu güncelledik ve tüm dillere çeviriler ekledik. Planlamanızı önceden yapmaya başlayın!</string>
 	<string name="whatsnew_elevation_profile_title">Rehberlerde yükseklik profili</string>
-	<string name="whatsnew_elevation_profile_message">Satın alınan rotanın profilindeki imleci kullanarak, yaklaşan yükselişlerin ve inişlerin zorluk derecesini çevrimdışı olarak değerlendirin.</string>
+	<string name="whatsnew_elevation_profile_message">Satın alınan rotanın profilindeki imleci kullanarak, yaklaşan yükselişlerin ve inişlerin zorluk derecesini çevrimdışı olarak değerlendirin.\n\"Ücretsiz örnekler\" kataloğunu indirin ve deneyin</string>
+	<string name="whatsnew_elevation_profile_cta_button">Örnekleri göster</string>
 
 	<!-- SECTION: Types -->
 	<string name="type.aerialway.station">Remontées mécaniques</string>
