--- a/android/res/values-uk/strings.xml
+++ b/android/res/values-uk/strings.xml
@@ -1785,7 +1785,8 @@
 	<string name="whatsnew_catalog_new_title">Новий каталог і тисячі ідей для відпочинку</string>
 	<string name="whatsnew_catalog_new_message">Ми оновили каталог путівників і додали переклади на всі мови. Почніть планувати заздалегідь!</string>
 	<string name="whatsnew_elevation_profile_title">Профіль висот у путівниках</string>
-	<string name="whatsnew_elevation_profile_message">Оцінюйте складність майбутніх підйомів і спусків офлайн за допомогою курсору в профілі придбаного маршруту.</string>
+	<string name="whatsnew_elevation_profile_message">Оцінюйте складність майбутніх підйомів і спусків офлайн за допомогою курсору в профілі придбаного маршруту.\nЗавантажте та спробуйте в розділі каталогу \"Безкоштовні приклади\"</string>
+	<string name="whatsnew_elevation_profile_cta_button">Подивитися приклади</string>
 
 	<!-- SECTION: Types -->
 	<string name="type.aerialway.station">Канатна дорога</string>
