--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -1851,7 +1851,8 @@
 	<string name="whatsnew_catalog_new_title">New guides catalog and thousands of travel ideas</string>
 	<string name="whatsnew_catalog_new_message">We have updated the guides catalog and added translations in all languages. Start planning in advance!</string>
 	<string name="whatsnew_elevation_profile_title">Elevation profile in travel guides</string>
-	<string name="whatsnew_elevation_profile_message">Evaluate the difficulty of upcoming offline ascents and descents with the cursor in the profile of the purchased route.</string>
+	<string name="whatsnew_elevation_profile_message">Evaluate the difficulty of upcoming offline ascents and descents with the cursor in the profile of the purchased route.\nDownload and try in the \"Free samples\" section of the catalog</string>
+	<string name="whatsnew_elevation_profile_cta_button">Check samples</string>
 
 	<!-- SECTION:  Partners  -->
 	<string name="sponsored_partner1_action">Outlets</string>
