--- a/iphone/Maps/LocalizedStrings/da.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/da.lproj/Localizable.strings
@@ -3268,7 +3268,9 @@
 
 "whatsnew_elevation_profile_title" = "Højdeprofil i rejseguides";
 
-"whatsnew_elevation_profile_message" = "Vurder kompleksiteten af kommende offline stigninger og nedstigninger med markøren i profilen af den købte rute.";
+"whatsnew_elevation_profile_message" = "Vurder kompleksiteten af kommende offline stigninger og nedstigninger med markøren i profilen af den købte rute.\nDownload og prøv \"Gratis prøver\" afsnittet af kataloget";
+
+"whatsnew_elevation_profile_cta_button" = "Se prøver";
 
 
 /**********  Partners  **********/
