--- a/iphone/Maps/LocalizedStrings/id.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/id.lproj/Localizable.strings
@@ -3268,7 +3268,9 @@
 
 "whatsnew_elevation_profile_title" = "Profil elevasi dalam panduan perjalanan";
 
-"whatsnew_elevation_profile_message" = "Mengevaluasi kerumitan kenaikan dan penurunan offline yang akan datang dengan kursor di profil dari rute yang dibeli.";
+"whatsnew_elevation_profile_message" = "Mengevaluasi kerumitan kenaikan dan penurunan offline yang akan datang dengan kursor di profil dari rute yang dibeli.\nUnduh dan coba di bagian \"Sampel Gratis\" dalam katalog";
+
+"whatsnew_elevation_profile_cta_button" = "Periksa sampel";
 
 
 /**********  Partners  **********/
