--- a/iphone/Maps/LocalizedStrings/nl.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/nl.lproj/Localizable.strings
@@ -3268,7 +3268,9 @@
 
 "whatsnew_elevation_profile_title" = "Hoogteprofiel in reisgidsen";
 
-"whatsnew_elevation_profile_message" = "Evalueer de moeilijkheidsgraad van komende beklimmingen en afdalingen offline met de cursor in het profiel van de aangeschafte route.";
+"whatsnew_elevation_profile_message" = "Evalueer de moeilijkheidsgraad van komende beklimmingen en afdalingen offline met de cursor in het profiel van de aangeschafte route.\nDownload en probeer het uit in het gedeelte \"Gratis voorbeelden\" van de catalogus";
+
+"whatsnew_elevation_profile_cta_button" = "Controleer voorbeelden";
 
 
 /**********  Partners  **********/
