--- a/iphone/Maps/LocalizedStrings/zh-Hant.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/zh-Hant.lproj/Localizable.strings
@@ -3268,7 +3268,9 @@
 
 "whatsnew_elevation_profile_title" = "指南中的高度剖面圖";
 
-"whatsnew_elevation_profile_message" = "使用所獲取路線中的光標離線評估即將遇到的上坡和下坡的難度。";
+"whatsnew_elevation_profile_message" = "使用所獲取路線中的光標離線評估即將遇到的上坡和下坡的難度。\n請在目錄欄下載並嘗試 \"免費示例\"";
+
+"whatsnew_elevation_profile_cta_button" = "查看示例";
 
 
 /**********  Partners  **********/
