--- a/iphone/Maps/LocalizedStrings/en.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/en.lproj/Localizable.strings
@@ -4132,6 +4132,8 @@
 
 "type.hwtag.bidir_bicycle" = "hwtag-bidir_bicycle";
 
+"type.hwtag.onedir_bicycle" = "hwtag-onedir_bicycle";
+
 "type.hwtag.lit" = "hwtag-lit";
 
 "type.hwtag.nobicycle" = "hwtag-nobicycle";
